# axiom

./: .gitattributes  .gitignore  Axiom.lean  Lemma.lean  README.md  build.sh  common.sh  compile.lean  config.ini  index.html  index.php  lake-manifest.json  lakefile.lean  lakefile.toml  main.py  new.sh  ocr.html  query.php  rename.sh  requirements.txt  run.lean  run.py  run.sh  setup.bat  setup.cfg  setup.py  start.sh  test.py
Axiom/: Basic.lean  __init__.py
Lemma/: Basic.lean
axiom/: __init__.py
blueprint/: debug.py  mysql.py  system.py
json/: .gitignore  extra_unicode.json
model/: __init__.py
php/: hierarchy.php  infix.php  init.php  itertools.php  lemma.php  mathlib.php  mysql.php  new.php  package.php  query.php  request.php  script.php  search.php  std.php  summary.php  symbol.php  sympy.php  theorem.php  utility.php
ps1/: delete_import.ps1  delete_open.ps1  mathlib.ps1  rename.ps1  run.ps1  unicode.ps1  utility.ps1
py/: unicode.py
sh/: build.sh  clipboard.sh  delete_import.sh  delete_open.sh  mathlib.sh  new.sh  rename.sh  rename_hypot.sh  run.sh  update.sh  utility.sh
static/: default.css  editing.js  functions.js
std/: Basic.lean  BinderInfo.lean  ConstantInfo.lean  ConstructorVal.lean  Json.lean  Level.lean  Name.lean  String.lean
stdlib/: Array.lean  Basic.lean  List.lean  Slice.lean  String.lean
sympy/: Basic.lean  abc.py  io.lean
templates/: console.html  module.html
util/: MySQL.py  __init__.py  cpp.py  function.py  hierarchy.py  hint.py  javaScript.py  search.py  suggest.py  summary.py  test.py  utility.py
website/: index.php  (+6 more)
(+19259 files in other folders)
