[metadata]
name = axiom.top
version = 1.0.0
author = Cosmos
author_email = 744984949@qq.com
long_description = file: README.md
url = https://github.com/cosmosZhou/axiom
license = MIT
classifiers = 
	Programming Language :: Python :: 3.9


[options]
packages = find:
install_requires = 
	sympy.keras
	mysql-connector
	flask